canary/canary_svc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: svc-canary
  namespace: canary
spec:
  replicas: 1
  selector:
    matchLabels:
      app: svc-canary
  template:
    metadata:
      labels:
        app: svc-canary
    spec:
      containers:
        - name: svc-canary
          image: httpd
          ports:
           - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: svc-canary
  namespace: canary
spec:
  type: NodePort
  selector:
    app: svc-canary
  ports:
    - port: 80
      targetPort: 80
