canary/canary_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: canary-ingress
  namespace: canary
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/canary: "true" # enable canary
    # weight 기반 라우팅 (100번 요청 중 50번)
    nginx.ingress.kubernetes.io/canary-weight: "10"
spec:
  ingressClassName: nginx
  rules:
    - host: canary-test.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: svc-canary
                port:
                  number: 80
